# snipe

./: Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs  py_parser.rs  shell_commands.rs
src/cmake_parser/: lazy_binding.rs  mod.rs  parsers.rs  structures.rs
src/scanners/: cmake.rs  mod.rs  python.rs
