[package]
name = "snipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
thiserror = "1.0.40"
walkdir = "2.3.3"
nom = "7"
regex = "1.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xdg = "2.5.2"
rustpython-parser = "0.3.0"
clap = { version = "4.4.6", features = ["derive"] }
handlebars = "4.4.0"
duct = "0.13.6"
shell-words = "1.1.0"
rustyline = "12.0.0"
